# dioxus-axum-hydrate-example

./: .env  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  trunk.html
frontend/src/: app.rs  main.rs
